2014-09-27  Julien Bect  <julien.bect@supelec.fr>

	PKG_DEL.m: Use addpath instead of cd.

	* admin/octpkg/PKG_DEL.m: Use addpath instead of cd.

	stk_param_getdefaultbounds.m: Avoid -Inf in default bounds.

	* paramestim/stk_param_getdefaultbounds.m: Avoid -Inf in default
	bounds.

2014-09-25  Julien Bect  <julien.bect@supelec.fr>

	Fix a problem with @stk_factorialdesign/fieldnames.m.

	* arrays/@stk_factorialdesign/fieldnames.m: Concatenate cell
	arrays of strings, but not a string with a cell array of strings
	since the latter syntax is not supported in Octave 3.2.x.

	Add @stk_factorialdesign/private to the path when using Octave 3.2.x.

	* config/stk_config_path.m: Add @stk_factorialdesign/private to
	the path when using Octave 3.2.x.

2014-09-22  Julien Bect  <julien.bect@supelec.fr>

	Robustify a private function.

	* arrays/@stk_factorialdesign/private/plot_surfmeshcontour.m: Make
	the function work with old versions of octave where, for some
	plotting functions (e.g., pcolor in Octave 3.6.4) the full syntax
	with axes handle and parameter/value pairs is not supported.

	Make stk_config_rmpath work on Windows systems.

	* config/stk_config_rmpath.m: Make stk_config_rmpath work on
	Windows systems (pathsep must be used instead of ':' since ':' is
	not the path separator for Windows...).

2014-09-20  Julien Bect  <julien.bect@supelec.fr>

	Provide a replacement for missing isrow.

	* misc/mole/isrow/isrow.m: Replacement for isrow.
	* config/stk_config_mole.m: Add our isrow function to the path if
	necessary (e.g., Matlab R2007a).

	Fix a tiny bug in stk_param_estim.

	* paramestim/stk_param_estim.m: Use strcmpi instead of strcmp to
	compare err.identifier to 'matlab:optimset:invalidparamname' on
	line 167. I wonder if this line has ever worked properly... (only
	affects old releases of Matlab, e.g.,R2007a).

	Don't use ~ to ignore arguments.

	* admin/build_tools/build_octpkg.m: Don't use ~ to ignore arguments.