@@ -48,10 +48,10 @@ end
 % main function folders
 path = [path {...
     fullfile(root, 'arrays'            ) ...
-    fullfile(root, 'arrays', 'generic' ) ...   
+    fullfile(root, 'arrays', 'generic' ) ...
     fullfile(root, 'core'              ) ...
     fullfile(root, 'covfcs'            ) ...
-    fullfile(root, 'lm'                ) ...    
+    fullfile(root, 'lm'                ) ...
     fullfile(root, 'paramestim'        ) ...
     fullfile(root, 'sampling'          ) ...
     fullfile(root, 'utils'             ) }];
@@ -79,15 +79,22 @@ path = [path {...
     fullfile(root, 'examples', 'test_functions'          ) }];
 
 % Fix a problem with private folders in Octave 3.2.x
-if isoctave && (~ STK_OCTAVE_PACKAGE),
+%   (add private folders to the path to make STK work...)
+if isoctave
     v = version;
     if strcmp (v(1:4), '3.2.')
-        path = [path {...
-            fullfile(root, 'arrays', 'generic', 'private') ...
-            fullfile(root, 'arrays', '@stk_dataframe', 'private') ...
-            fullfile(root, 'arrays', '@stk_factorialdesign', 'private') ...
-            fullfile(root, 'core', '@stk_kreq_qr', 'private') ...
-            fullfile(root, 'misc', 'dist', 'private')}];
+        test_path = [path {...
+            fullfile(root, 'arrays', '@stk_dataframe') ...
+            fullfile(root, 'arrays', '@stk_factorialdesign') ...
+            fullfile(root, 'core', '@stk_kreq_qr')}];
+        private_path = {};
+        for i = 1:(length (test_path))
+            p = fullfile (test_path{i}, 'private');
+            if exist (p, 'dir')
+                private_path = [private_path {p}];
+            end
+        end
+        path = [path private_path];
     end
 end
 
